<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/Abu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textSize="14sp"
            android:textColor="#000"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="15sp"
            android:text=""
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/TotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Title"
            android:layout_marginStart="100sp"
            android:layout_marginTop="7dp"
            android:text="@string/rp"
            android:textSize="14sp"
            android:textColor="#000"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/Btn_remove"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/close"
        android:layout_gravity="right"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/todo"
        tools:ignore="RtlHardcoded" />

</androidx.cardview.widget.CardView>