<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@color/Background2"
    tools:context=".fragments.FragmentHome">


            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carousel"
                style="@style/carousel"/>

            <GridLayout
                android:id="@+id/homeGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/carousel"
                android:layout_marginTop="10dp"
                android:columnCount="4"
                android:rowCount="2"
                android:padding="5dp">
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/rice_box"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rice_box"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/catering"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/buffet"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/basket"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/office"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="58dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/coffee" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/breaking"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/shaped_rice"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shaped"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/rantangan"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Basket"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/nasibakar"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/traditional"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_height="100dp"
                    android:layout_width="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/lainnya"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/anymore"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>



    </FrameLayout>
